--- a/dox_theme/www/login.html
+++ b/dox_theme/www/login.html
@@ -60,7 +60,7 @@
                 {{ email_login_body() }}
             </form>
             <div class="text-center sign-up-message">
-                <a href="https://doxerp.com" class="btn link-btn">{{ _("Visit DoxERP website") }}</a>
+                <a href="https://erp-pos.frappe.cloud/evopulse-erp" class="btn link-btn">{{ _("Visit EvoPulse ERP website") }}</a>
             </div>
         </div>
     </section>
@@ -68,7 +68,7 @@
 {% endblock %}
 
 {% block script %}
-<script src="/assets/dox_theme/js/login_dox_theme.js"></script>
+<script src="/assets/dox_theme/js/Dox-Erp-logo-rectangle.gif"></script>
 <script>
     // JavaScript code for toggling password visibility
     document.querySelectorAll('.toggle-password').forEach(item => {
