--- a/dox_theme/www/login.html
+++ b/dox_theme/www/login.html
@@ -68,7 +68,7 @@
 {% endblock %}
 
 {% block script %}
-<script src="/assets/dox_theme/js/dox_logo.png"></script>
+<script src="/assets/dox_theme/js/login_dox_theme.js"></script>
 <script>
     // JavaScript code for toggling password visibility
     document.querySelectorAll('.toggle-password').forEach(item => {
